--- a/ProjectManager/src/app/app.component.html
+++ b/ProjectManager/src/app/app.component.html
@@ -29,7 +29,7 @@
 										<div class="col-sm-6 col-sm-offset-3">
 											<div class="form-group ">
 												<label for="task">Project:</label>
-												<input type="text" class="form-control" id="Project_Name" name="Project_Name" formControlName="Project_Name">
+												<input type="text" class="form-control" id="project" name="project" formControlName="project">
 												<div class="clearfix"></div>
 											</div>
 										</div>
@@ -39,8 +39,8 @@
 									<div class="col-sm-12">
 										<div class="col-sm-6 col-sm-offset-3 addprjct-datepicker">
 											<input type="checkbox" class="custom-control-input" id="save-info" (change)="onFilterChange()" required> Set Start Data and End Date
-											<input type="date" class="datepicker form-control start-Prjct-data" name="Start_Date" formControlName="Start_Date" [attr.disabled]="!filter ? '': null">
-											<input type="date" class="datepicker form-control" name="End_Date" formControlName="End_Date" [attr.disabled]="!filter ? '' : null">
+											<input type="date" class="datepicker form-control start-Prjct-data" name="startDate" formControlName="startDate" [attr.disabled]="!filter ? '': null">
+											<input type="date" class="datepicker form-control" name="endDate" formControlName="endDate" [attr.disabled]="!filter ? '' : null">
 										</div>
 									</div>
 								</div>
@@ -78,7 +78,7 @@
 									<div class="col-sm-12">
 										<div class="col-sm-6 col-sm-offset-3">
 											<div class="form-group form-btns pull-right text-right">
-												<button class="btn btn-primary" ng-disabled="myProjectForm.form.valid">{{ myProjectForm.get('Project_ID').value ? 'Update' : 'Add' }} Project</button>
+												<button class="btn btn-primary" ng-disabled="myProjectForm.form.valid">{{ myProjectForm.get('projectId').value ? 'Update' : 'Add' }} Project</button>
 												<button type="button" class="btn btn-secondary" (click)="ResetProject()">Reset</button>
 											</div>
 										</div>
@@ -98,10 +98,10 @@
 							</div>
 							<div class="col-sm-12 form-group form-btns">
 								<label for="">Sort By:</label>
-								<button class="btn btn-primary" (click)="sortProject('Start_Date')">Start Date</button>
-								<button class="btn btn-primary" (click)="sortProject('End_Date')">End Date</button>
-								<button class="btn btn-primary" (click)="sortProject('Priority')">Priority</button>
-								<button class="btn btn-primary" (click)="sortProject('Is_Active')">Completed</button>
+								<button class="btn btn-primary" (click)="sortProject('startDate')">Start Date</button>
+								<button class="btn btn-primary" (click)="sortProject('endDate')">End Date</button>
+								<button class="btn btn-primary" (click)="sortProject('priority')">Priority</button>
+								<button class="btn btn-primary" (click)="sortProject('IsActive')">Completed</button>
 							</div>
 							<div class="clearfix"></div>
 						</div>
@@ -109,22 +109,22 @@
 						<div class="listView">
 							<div class="row" *ngFor="let proj of projDetails | filter : { AllProjectSearch : search.projAllSearch}">
 								<div class="col-sm-8 padding-0 bg-gray">
-									<div class="viewProjectList">Project: {{proj.Project}}</div>
+									<div class="viewProjectList">Project: {{proj.project}}</div>
 									<div class="col-sm-6 padding-0">
-										<div class="viewProjectList">No. of Task: {{proj.TaskCount}}</div>
-										<div class="viewProjectList">Start Date: {{proj.Start_Date | date: 'MM/dd/yyyy'}}</div>
+										<div class="viewProjectList">No. of Task: {{proj.taskCount}}</div>
+										<div class="viewProjectList">Start Date: {{proj.startDate | date: 'MM/dd/yyyy'}}</div>
 									</div>
 									<div class="col-sm-6">
-										<div class="viewProjectList">Completed: {{proj.ProjStatus}}</div>
-										<div class="viewProjectList">End Date: {{proj.End_Date | date: 'MM/dd/yyyy'}}</div>
+										<div class="viewProjectList">Completed: {{proj.taskCompleted}}</div>
+										<div class="viewProjectList">End Date: {{proj.endDate | date: 'MM/dd/yyyy'}}</div>
 									</div>
 								</div>
 								<div class="col-sm-2">
-									<div class="addPriority">Priority : {{proj.Priority}}</div>
+									<div class="addPriority">Priority : {{proj.priority}}</div>
 
 									<div class="progress progress-bar-vertical">
-										<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="30" [style.height.%]="proj.Active_Progress">
-											<span class="sr-only">{{proj.Priority}}</span>
+										<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="30" [style.height.%]="proj.priority*3.3">
+											<span class="sr-only">{{proj.priority}}</span>
 										</div>
 									</div>
 									<div class="viewPriority bg-gray"></div>
@@ -484,10 +484,10 @@
 				</div>
 
 				<div class="modal-body" *ngFor="let manager of managerDetails | filter : { radioManagerSearch : search.radioMgrSearch}">
-					<label class="modContainer">{{manager.Manager_ID}}
-						<input type="radio" name="radio" [(ngModel)]="selectedManager" [value]="manager.Manager_ID" />
+					<label class="modContainer">{{manager.firstName}}, {{manager.lastName}}
+						<input type="radio" name="radio" [(ngModel)]="selectedManager" [value]="manager.userId" />
 						<span class="checkmark"></span>
-					</label>
+					</label>					
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
