Edit and End Task

--- a/ProjectManager/src/app/app.component.html
+++ b/ProjectManager/src/app/app.component.html
@@ -373,7 +373,7 @@
 										<div class="col-sm-6">
 											<div class="form-group">
 												<label for="task" class="frst-label">Project:</label>
-												<input type="text" class="form-control" id="view-task" [(ngModel)]="search.projSearch" name="projSearch" formControlName="searchedProject">&nbsp;
+												<input type="text" style="width:60%" class="form-control" id="view-task" [(ngModel)]="search.projSearch" name="projSearch" formControlName="searchedProject">&nbsp;
 
 												<button class="btn btn-primary" (click)="SearchTaskProject()">Search</button>
 												<div class="clearfix"></div>
@@ -396,9 +396,7 @@
 										<div class="table-responsive task-table">
 											<table class="table table-bordered table-hover">
 												<thead>
-													<tr>
-														<th style="display:none;">Task</th>
-														<th style="display:none;">Parent</th>
+													<tr>														
 														<th>Project</th>
 														<th>Task</th>
 														<th>Parent</th>
@@ -409,9 +407,7 @@
 													</tr>
 												</thead>
 												<tbody>
-													<tr *ngFor="let task of pagedItems | filter : { ProjectSearch : search.projSearch}">
-														<td align="center" style="display:none;">{{task.taskId}}</td>
-														<td align="center" style="display:none;">{{task.parentId}}</td>
+													<tr *ngFor="let task of pagedItems">														
 														<td align="center">{{task.projectName}}</td>
 														<td align="center">{{task.task}}</td>
 														<td align="center">{{task.parentTask}}</td>
@@ -421,7 +417,7 @@
 
 														<td>
 															<button class="btn btn-primary" (click)="EditTask(task)" [disabled]="task.status==1">Edit</button>
-															<button class="btn btn-default" (click)="EndTask(task)" [disabled]="task.status==1">End Task</button>
+															<button class="btn btn-primary" (click)="EndTask(task)" [disabled]="task.status==1">End Task</button>
 														</td>
 													</tr>
 
@@ -591,7 +587,7 @@
 
 				<div class="modal-body" *ngFor="let project of projectNameList | filter : { radioProjectSearch : search.radioProjSearch}">
 					<label class="modContainer">{{project.project}}
-						<input type="radio" name="radio5" [(ngModel)]="searchedProject" [id]="'project_'+i" [value]="project.project">
+						<input type="radio" name="radio5" [(ngModel)]="searchedProject" (click)="getProjectTasks(project)"  [id]="'project_'+i" [value]="project.project">
 						<span class="checkmark"></span>
 					</label>
 				</div>
