--- a/ProjectManager/src/app/app.component.css
+++ b/ProjectManager/src/app/app.component.css
@@ -20,14 +20,10 @@ header h1 { text-align: center; font-weight: bold; padding: 10px 0px; font-size:
 .form-btns { text-align: center; }
 .form-btns button { margin-right: 10px; width: 100px; }
 
-.task-table { width: 95%; margin: 0 auto; }
-.task-table table thead th { color: #fff; background: #6b7881; border-color: #ddd; text-align: center; }
-.task-table table thead th:first-child { border-left: 0; }
-.task-table table thead th:last-child { }
-.table-bordered { border: 0; margin-bottom: 0; }
-.task-table .table>tbody>tr>td { vertical-align: middle; } 
-.task-table .table>tbody>tr>td:last-child { text-align: center; }
-.task-table .table>tbody>tr>td:last-child button { margin-right: 10px; }
+.view_task { width: 98%; margin: 0 auto; }
+.view_task_head { border:0px; font-weight: bold; }
+.view_task_data { border:0px; text-align:center; line-height:5}
+.view_task_data label { width: 200px;  height: 75px;  text-align: center; font-weight: normal;  background: #eee;}
 
 footer { padding: 10px 0px; }
 .frst-label{width:16% !important;}
@@ -72,3 +68,5 @@ footer { padding: 10px 0px; }
 .btn-primary{background-color:#77818a; border-color:#222323}
 button{background-color:#77818a;}
 .progress-bar{background-color:#77818a;}
+.btn-circle {border-radius: 50%;background-color: #FFFFFF; border-color: #222323; color: #222323;}
+.border_doted{border-top: 1px dashed blue;}
